--- a/requirements-llamacpp.txt
+++ b/requirements-llamacpp.txt
@@ -1,5 +1,4 @@
-# MiniCPM
-# pip install llama-cpp-python --extra-index-url https://abetlen.github.io/llama-cpp-python/whl/cu121 --upgrade --force-reinstall --no-cache-dir
+#--index-url https://abetlen.github.io/llama-cpp-python/whl/cu121
+--index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
 
---index-url https://abetlen.github.io/llama-cpp-python/whl/cu121
 llama-cpp-python>=0.2.90
