--- a/requirements-onnx.txt
+++ b/requirements-onnx.txt
@@ -1,5 +1,2 @@
-# onnx
-# pip install onnxruntime-gpu --extra-index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
-
 --index-url https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/
-onnxruntime-gpu
+onnxruntime-gpu>=1.18.1
