Updated requirements: InternVL2 1B/40B have issues with transformers 4.46

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ pillow
 msgpack
 
 # Inference
-transformers>=4.45.0
+transformers>=4.45.0,<4.46 # InternVL2 1B/40B have issues with 4.46
 accelerate
 
 # Quantization
