--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,13 @@
-.venv/
 .venv*/
 __pycache__/
 /.vscode/
-*.log
-/*.json
-/user/*.json
-
 screenshots/
 benchmark/
+
+*.log
+*.json
+*.zip
+*.bak
+
+*.txt
+!requirements*.txt
