Refactor image loading. Add support for .jxl format (read/write JPEG XL, updated requirements). In places where images are loaded with opencv to get a numpy mat, or with QPixmap/QImage for display, fallback to PIL+plugins if the image couldn't be decoded. This allows loading more image formats.
Some formats, like PDF, can only be read by Qt. They can be displayed but are unavailable in the inference backend and for some other processing.
Manual cropping should work with all formats.

Reading the image size is slow for formats that aren't supported by Qt.

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ natsort
 # Image
 opencv-python-headless
 pillow
+pillow-jxl-plugin
 
 # Inter-process communication
 msgpack
@@ -41,7 +42,7 @@ onnx
 kornia
 
 # InSPyReNet rembg
-transparent_background
+transparent-background
 
 # Image Upscaling
 spandrel
