Added setup script, updated requirements

--- a/requirements-llamacpp.txt
+++ b/requirements-llamacpp.txt
@@ -1,4 +1,4 @@
 #--index-url https://abetlen.github.io/llama-cpp-python/whl/cu121
 --index-url https://abetlen.github.io/llama-cpp-python/whl/cu124
 
-llama-cpp-python>=0.2.90
+llama-cpp-python
