--- a/requirements-pytorch.txt
+++ b/requirements-pytorch.txt
@@ -3,7 +3,11 @@
 #--extra-index-url https://download.pytorch.org/whl/cu126
 --extra-index-url https://download.pytorch.org/whl/cu128
 #--extra-index-url https://download.pytorch.org/whl/cu129
+#--extra-index-url https://download.pytorch.org/whl/cu130
 #--extra-index-url https://download.pytorch.org/whl/rocm6.4
+
+# torch version is set in main_setup.py
+# it affects availability of prebuilt flash_attn wheels
 
 torch
 torchvision
